// ABGELEITET aus stammdaten-schema.dbml — nie von Hand pflegen.
// Regenerieren: awk -f domains/dbml-ohne-lookups.awk domains/stammdaten-schema.dbml > domains/stammdaten-schema-ohne-lookups.dbml
// Reine Wertelisten und ihre Ref:-Zeilen sind entfernt; die verweisenden Spalten bleiben.

Project stammdaten {
  database_type: 'PostgreSQL'
}

Table school_branches {
  school_branch_id integer [pk, increment]
  label text    [not null, unique]
}

Table grade_levels {
  grade_level_id integer  [pk, increment]
  school_branch_id integer  [not null]
  label            text     [not null]
  sort_order       smallint [not null]
  is_final_grade   boolean  [not null, default: false]
  created_at       timestamptz [not null, default: `now()`]
  created_by       text     [not null]
  updated_at       timestamptz [not null, default: `now()`]
  updated_by       text     [not null]

  indexes {
    (school_branch_id, label) [unique]
    (school_branch_id, sort_order) [unique]
    (grade_level_id, school_branch_id) [unique]
    (school_branch_id) [unique, name: 'one_final_grade_per_branch']
  }
  Note: '(grade_level_id, school_branch_id): Ziel des zusammengesetzten FK von classes — hält classes.school_branch_id konsistent zur aktuellen Klassenstufe. one_final_grade_per_branch ist in echt partiell (WHERE is_final_grade): höchstens eine Abschlussklasse je Zweig, sonst sperrt die Putzdienst-Abgangsregel still den September für Familien, die noch bleiben.'
}

Table classes {
  class_id integer  [pk, increment]
  school_branch_id integer  [not null]
  grade_level_id   integer  [not null]
  entry_year       smallint [not null]
  stream           text     [not null, note: 'CHECK <> \'\'']
  is_active        boolean  [not null, default: true, note: 'false = Kohorte durch oder Zug aufgelöst; Zeile bleibt für die Akte, zählt nirgends mehr als Klasse mit']
  class_teacher_id uuid     [note: 'FK auf employees, in SQL per ALTER TABLE nachgezogen — Definitionsreihenfolge']
  room             text
  created_at       timestamptz [not null, default: `now()`]
  created_by       text     [not null]
  updated_at       timestamptz [not null, default: `now()`]
  updated_by       text     [not null]

  indexes {
    (school_branch_id, entry_year, stream) [unique]
    class_teacher_id
  }
  Note: 'Kohorte, nicht Klassenstufen-Slot: Zeile = ein Zug eines Jahrgangs im Zweig (Zweig/Eintrittsjahr/Zug). Stabil ist die Zeile, nicht ihre Besetzung — Quereinsteiger kommen dazu, Abgänger fallen weg, Wiederholer wechseln die Kohorte. entry_year ist das Startjahr der Kohorte, der Eintritt des Kindes steht als children.entry_date. grade_level_id ist die AKTUELLE Klassenstufe, wandert beim Jahreslauf auf derselben Zeile weiter, bei einer durchgelaufenen Kohorte bleibt sie auf der Abschlussstufe stehen und is_active wird false. Anzeigename ("5a") und Kohorten-Kennung ("RS25a") werden berechnet, nicht gespeichert.'
}

Table addresses {
  address_id uuid        [pk, default: `gen_random_uuid()`]
  street       text        [not null, note: 'CHECK <> \'\'']
  house_number text        [note: 'CHECK <> \'\'']
  district     text        [note: 'CHECK <> \'\'']
  postal_code  text        [not null, note: 'CHECK <> \'\'']
  city         text        [not null, note: 'CHECK <> \'\'']
  country_id   integer     [not null]
  created_at   timestamptz [not null, default: `now()`]
  created_by   text        [not null]
  updated_at   timestamptz [not null, default: `now()`]
  updated_by   text        [not null]

  indexes {
    (postal_code, street, house_number)
  }
  Note: 'Eigene Tabelle statt Spalten je Person: Kind + Eltern teilen sich im Regelfall eine Zeile. Suchindex nötig, damit die Eingabemaske bestehende Zeilen findet — sonst verwaist das Konzept in der Praxis. Straße/PLZ/Ort sind Pflicht: eine Zeile mit nur einem Land darin wäre eine unauffindbare Karteileiche. „Keine Anschrift bekannt" drückt persons.address_id IS NULL aus. Hausnummer und Teilort dürfen fehlen (Hofname, Postfach, Ort ohne Teilorte).'
}

Table persons {
  person_id uuid        [pk, default: `gen_random_uuid()`]
  salutation_id     integer
  first_name        text        [note: 'CHECK <> \'\'']
  last_name         text        [not null, note: 'CHECK <> \'\'']
  gender_id         integer
  address_id        uuid
  email             citext
  created_at        timestamptz [not null, default: `now()`]
  created_by        text        [not null]
  updated_at        timestamptz [not null, default: `now()`]
  updated_by        text        [not null]

  indexes {
    address_id
    email
    `lower(last_name)` [name: 'persons_last_name_pattern_idx']
  }
  Note: 'Gemeinsame Basis jeder natürlichen Person. Kind/Guardian/Kontakt/Zahler sind Rollen darauf, keine eigenen Personentabellen. email ist die PRIVATE Adresse — Schulpostfach steht an children.school_email, Dienstadresse an employees.work_email, beide enden mit ihrer Rolle. Struktur-CHECK (genau ein @, kein Leerzeichen, Punkt in der Domain — fängt Leerstring und Import-Artefakte), bewusst NICHT unique — zwei Erziehungsberechtigte dürfen sich eine Mailbox teilen, ein OTP-Treffer (idea/04) liefert dann die Vereinigung ihrer Familien. Eigener Index, da kein Constraint ihn mehr anlegt. last_name-Index in echt text_pattern_ops für Präfixsuche, hier nur als Ausdrucksindex angenähert.'
}

Table phone_numbers {
  phone_number_id uuid        [pk, default: `gen_random_uuid()`]
  person_id       uuid        [not null]
  phone_type_id   integer     [not null]
  number          text        [not null, note: 'CHECK <> \'\'']
  is_primary      boolean     [not null, default: false]
  note            text
  created_at      timestamptz [not null, default: `now()`]
  created_by      text        [not null]
  updated_at      timestamptz [not null, default: `now()`]
  updated_by      text        [not null]

  indexes {
    (person_id, number) [unique]
    (person_id) [unique, name: 'phone_numbers_one_primary_per_person']
  }
  Note: 'Gehört immer zu einer Person — eine Behördennummer gibt es nicht als eigenen Fall (Begründung an guardians). is_primary: die von der Person benannte Rufnummer, genutzt für O365-Kontakte; one_primary_per_person ist in echt partiell (WHERE is_primary). Dieselbe Nummer nur einmal je Person — der Typ ist eine Eigenschaft der Nummer, nicht ihre Identität; dieser Unique-Index trägt zugleich den Zugriff über person_id allein.'
}

Table families {
  family_id  uuid        [pk, default: `gen_random_uuid()`]
  label      text        [note: 'Außenbezeichnung „Familie Müller"; leer = aus den Mitgliedern ableiten. Bewusst nicht unique.']
  alias      text        [unique, note: 'Interne Unterscheidung, geht nie in eine Zustellung.']
  created_at timestamptz [not null, default: `now()`]
  created_by text        [not null]
  updated_at timestamptz [not null, default: `now()`]
  updated_by text        [not null]
  Note: 'Sorgerecht-Konstellation, nicht Haushalt. Zwei Bezeichnungsfelder mit verschiedenem Publikum: label nach außen (leer = ableiten), alias nur intern und deshalb unique.'
}

Table children {
  child_id                    uuid    [pk]
  family_id                   uuid
  payer_id                    uuid    [note: 'Genau eine/r je Kind — geteilte Beiträge gibt es nicht. FK in SQL per ALTER TABLE nachgezogen (Definitionsreihenfolge).']
  nickname                    text
  school_email                citext  [unique, note: 'Schulpostfach, vergeben von der M365-Kontenverwaltung']
  date_of_birth               date    [not null]
  birthplace                  text
  birth_country_id            integer
  nationality_id              integer
  second_nationality_id       integer
  home_language_id            integer
  denomination_id             integer
  congregation                text
  provisional_grade_level_id  integer
  class_id                    integer
  registration_date           date
  entry_date                  date
  exit_date                   date
  previous_school_id          integer
  previous_school_consent_at  timestamptz
  created_at                  timestamptz [not null, default: `now()`]
  created_by                  text    [not null]
  updated_at                  timestamptz [not null, default: `now()`]
  updated_by                  text    [not null]

  indexes {
    family_id
    class_id
    provisional_grade_level_id
  }
  Note: 'children.child_id = persons.person_id (Kind IST eine Person). provisional_grade_level_id UND class_id schließen sich per CHECK gegenseitig aus (keine Redundanz, die auseinanderlaufen könnte) — ist eine Klasse zugeteilt, kommt die aktuelle Klassenstufe per Join aus classes.grade_level_id. second_nationality_id: nur mit gesetzter nationality_id und nicht derselbe Staat (CHECK). date_of_birth liegt per CHECK vor registration_date und entry_date (fängt vertauschte Importspalten). school_email: Schulpostfach an der Rolle statt in persons.email — UNIQUE, endet mit der Rolle, wird nie OTP-Identität; gleiche Bauform wie employees.work_email. denomination_id/congregation: Art.-9-Daten, geschützt per Spalten-GRANT, rollenspezifisch (nur hier am Kind, nicht auf persons und nicht auf guardians).'
}

Table guardians {
  guardian_id     uuid    [pk]
  occupation      text
  created_at      timestamptz [not null, default: `now()`]
  created_by      text    [not null]
  updated_at      timestamptz [not null, default: `now()`]
  updated_by      text    [not null]

  Note: 'IST eine Person, teilt sich den Schlüssel mit persons. Keine Organisation als Erziehungsberechtigte: Kinder kommen nur über den Anmeldeprozess, und dessen Formular fragt Mutter/Vater/Pflegeeltern — nie eine Institution. Eine Amtsvormundin ist deshalb eine ganz normale Person; für welche Institution sie handelt, trägt family_guardians.acting_for, die Befreiung von der Elternmitarbeit guardian_categories.exempt_from_parent_duties. Bewusst kein is_employee-Flag — die Putzdienst-Befreiung eigener Mitarbeiter fragt employees.employment_end IS NULL.'
}

Table family_guardians {
  family_id            uuid    [not null]
  guardian_id          uuid    [not null]
  guardian_category_id integer
  include_in_correspondence boolean [not null, default: true, note: '„In Briefe miteinbeziehen" — steht auf allen vier Anmeldetag-Checklisten neben „Sorgeberechtigt"']
  acting_for           text
  created_at           timestamptz [not null, default: `now()`]
  created_by           text    [not null]
  updated_at           timestamptz [not null, default: `now()`]
  updated_by           text    [not null]

  indexes {
    (family_id, guardian_id) [pk]
    guardian_id
  }
  Note: 'M:N Guardian↔Familie (Patchwork). Grundlage des OTP-Ownership-Checks. acting_for: für welche Institution diese Person in diesem Fall handelt („Jugendamt Musterkreis") — nur für die Briefanschrift, trägt keine Regel.'
}

Table employees {
  employee_id uuid        [pk]
  work_email       citext      [unique]
  entra_object_id  text        [unique, note: 'CHECK <> \'\'']
  employment_start date
  employment_end   date
  created_at       timestamptz [not null, default: `now()`]
  created_by       text        [not null]
  updated_at       timestamptz [not null, default: `now()`]
  updated_by       text        [not null]
  Note: 'Rolle auf persons (id = persons.person_id), immer natürliche Person. work_email getrennt von persons.email: Letztere ist privat und zugleich OTP-Identität — ein Mitarbeiter, der auch Elternteil ist, verlöre sonst beim Offboarding seinen Elternzugang. Hier UNIQUE, weil die Schule diese Postfächer selbst vergibt. entra_object_id verbindet den Audit-Verursacher "entra:<oid>" mit der Person und trägt die Zugriffsentscheidung "ist Klassenlehrer:in dieser Klasse". employment_end gesetzt = ausgeschieden; die Putzdienst-Befreiung fragt employment_end IS NULL. Bereichs-/Vorgesetztenstruktur bewusst noch nicht enthalten (erst mit der Rechnungsfreigabe).'
}

Table child_contacts {
  child_id     uuid [not null]
  contact_id   uuid [not null]
  relationship text
  priority     smallint
  pickup_authorized boolean [not null, default: false]
  created_at   timestamptz [not null, default: `now()`]
  created_by   text [not null]
  updated_at   timestamptz [not null, default: `now()`]
  updated_by   text [not null]

  indexes {
    (child_id, contact_id) [pk]
    contact_id
    (child_id, priority) [unique, name: 'one_priority_rank_per_child']
  }
  Note: 'Keine Rollentabelle contacts daneben: contact_id zeigt direkt auf persons. Anders als children/guardians/payers/employees trüge eine solche Zeile keine eigene Nutzlast und wäre ein zweiter Ort für dieselbe Tatsache — die Kontaktrolle IST die Menge der hier verknüpften Personen. relationship ("Großmutter") relativ zum Kind, nicht absolut zur Kontaktperson — Freitext, anders als guardian_categories: langer Wertevorrat-Schwanz, niemand wertet danach aus. priority: Notfallkontakt-Reihenfolge, nullable, höchstens einmal je Kind belegt. pickup_authorized ist davon unabhängig (anrufbar ≠ abholberechtigt) und per Default AUS — die Erlaubnis wird gesetzt, nicht abgewählt. CHECK child_id <> contact_id.'
}

Table payers {
  payer_id           uuid    [pk]
  billing_address_id uuid
  iban               text
  bic                text
  account_holder     text
  mandate_reference  text        [unique]
  mandate_signed_at  date
  created_at         timestamptz [not null, default: `now()`]
  created_by         text [not null]
  updated_at         timestamptz [not null, default: `now()`]
  updated_by         text [not null]

  indexes {
    billing_address_id
  }
  Note: 'IST eine Person, teilt sich den Schlüssel mit persons — eigene Tabelle wegen der Nutzlast (Bankverbindung, Mandat), anders als die Kontaktrolle. billing_address_id nullable: NULL = Anschrift der zahlenden Person gilt. iban/bic: Struktur-CHECK nach ISO 13616 bzw. ISO 9362 (international, nicht auf deutsche Längen festgelegt); gespeichert nur normalisiert, ohne Leerzeichen. bic vermutlich entbehrlich (SEPA IBAN-only seit 2016, folgt aus der IBAN) — bleibt, bis das Optigem-Importformat geklärt ist. SEPA-Mandat: ein Mandat je Zahler, nicht je Zweck; mandate_reference und mandate_signed_at nur gemeinsam und nie ohne iban (CHECKs in SQL). Kein Kreditinstitut (folgt aus der BIC), keine Mandatshistorie; das signierte PDF liegt in der Schulvertrags-Fachdomäne und trägt kein eigenes Datum.'
}

Ref: grade_levels.school_branch_id > school_branches.school_branch_id [delete: restrict]
Ref: classes.school_branch_id > school_branches.school_branch_id [delete: restrict]
Ref: classes.(grade_level_id, school_branch_id) > grade_levels.(grade_level_id, school_branch_id)

Ref: persons.address_id > addresses.address_id [delete: restrict]

Ref: phone_numbers.person_id > persons.person_id [delete: cascade]

Ref: children.child_id - persons.person_id [delete: cascade]
Ref: children.family_id > families.family_id [delete: restrict]
Ref: children.provisional_grade_level_id > grade_levels.grade_level_id [delete: restrict]
Ref: children.payer_id > payers.payer_id [delete: restrict]
Ref: children.class_id > classes.class_id [delete: restrict]

Ref: guardians.guardian_id - persons.person_id [delete: restrict]

Ref: family_guardians.family_id > families.family_id [delete: cascade]
Ref: family_guardians.guardian_id > guardians.guardian_id [delete: cascade]

Ref: child_contacts.child_id > children.child_id [delete: cascade]
Ref: child_contacts.contact_id > persons.person_id [delete: cascade]

Ref: payers.payer_id - persons.person_id [delete: restrict]
Ref: payers.billing_address_id > addresses.address_id [delete: restrict]

Ref: employees.employee_id - persons.person_id [delete: cascade]
Ref: classes.class_teacher_id > employees.employee_id [delete: restrict]
